fixed overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,7 @@ body {
     font-family: "Helvetica Neue", arial, sans-serif;
     color: #F2F2F2;
     height:100%;
+    overflow-y: hidden;
 }
 
 header {
@@ -157,7 +158,8 @@ header .hex2 {
 
 div.wrapper {
     width: 400px;
-    margin: 100px auto;
+    margin: 0 auto;
+    padding: 100px 0 0 0;
 }
 
 #MainBlock {
